--- a/course.html
+++ b/course.html
@@ -62,17 +62,17 @@
         <h2>What Our Students Say</h2>
         <div class="testimonials-grid">
             <div class="testimonial">
-                <img src="C:\Users\Dell\Desktop\in\images (1).jpeg" alt="Alex R." class="testimonial-img">
+                <img src="alex.jpg" alt="Alex R." class="testimonial-img">
                 <p>"This course transformed my understanding of aviation. The hands-on lessons were invaluable!"</p>
                 <span>- Alex R., Commercial Pilot</span>
             </div>
             <div class="testimonial">
-                <img src="C:\Users\Dell\Desktop\in\images.jpeg" alt="Alex R." class="testimonial-img">
+                <img src="images.jpeg" alt="Alex R." class="testimonial-img">
                 <p>"I went from zero knowledge to confidently pursuing my dream of flying. Highly recommended!"</p>
                 <span>- Priya M., Student Pilot</span>
             </div>
             <div class="testimonial">
-                <img src="C:\Users\Dell\Desktop\in\EZHz5kDXQAEmSF3.png" alt="Alex R." class="testimonial-img">
+                <img src="images (1).jpeg" alt="Alex R." class="testimonial-img">
                 <p>"The expert guidance and comprehensive modules made this the best investment in my career."</p>
                 <span>- John K., Private Pilot</span>
             </div>
@@ -83,9 +83,9 @@
     <footer>
         <p>&copy; 2025 How to Be a Pilot. All rights reserved.</p>
         <div class="social-icons">
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images (3).jpeg" alt="Facebook"></a>
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images (4).jpeg" alt="Twitter"></a>
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images.png" alt="Instagram"></a>
+            <a href="#"><img src="images (3).jpeg" alt="Facebook"></a>
+            <a href="#"><img src="images (4).jpeg" alt="Twitter"></a>
+            <a href="#"><img src="images.png" alt="Instagram"></a>
         </div>
     </footer>
 </body>
