--- a/consultation.html
+++ b/consultation.html
@@ -52,9 +52,9 @@
                 <footer>
                     <p>&copy; 2025 How to Be a Pilot. All rights reserved.</p>
                     <div class="social-icons">
-                        <a href="#"><img src="C:\Users\Dell\Desktop\in\images (3).jpeg" alt="Facebook"></a>
-                        <a href="#"><img src="C:\Users\Dell\Desktop\in\images (4).jpeg" alt="Twitter"></a>
-                        <a href="#"><img src="C:\Users\Dell\Desktop\in\images.png" alt="Instagram"></a>
+                        <a href="#"><img src="images (3).jpeg" alt="Facebook"></a>
+                        <a href="#"><img src="images (4).jpeg" alt="Twitter"></a>
+                        <a href="#"><img src="images.png" alt="Instagram"></a>
                     </div>
                 </footer>
             </body>
