--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="hero">
-            <img src="C:\Users\Dell\Desktop\CAT\hero-image.jpg" alt="Aviation">
+            <img src="hero-image.jpg" alt="Aviation">
             <h2>Become a Certified Pilot</h2>
             <p>Join our comprehensive course and consultations today.</p>
             <a href="course.html" class="cta">Enroll in the Course</a>
@@ -33,9 +33,9 @@
         <h3>Explore Aviation</h3>
         <p>Check out these amazing videos to fuel your passion for flying.</p>
         <div class="video-gallery">
-            <iframe width="300" height="200" src="C:\Users\Dell\Desktop\in\mixkit-passenger-plane-preparing-for-takeoff-4083-hd-ready.mp4" allowfullscreen></iframe>
-            <iframe width="300" height="200" src="C:\Users\Dell\Desktop\in\mixkit-airplane-landing-in-illuminated-airport-tracks-7374-hd-ready.mp4" allowfullscreen></iframe>
-            <iframe width="300" height="200" src="C:\Users\Dell\Desktop\in\mixkit-mechanic-inspecting-an-airplane-engine-23990-hd-ready.mp4" allowfullscreen></iframe>
+            <iframe width="300" height="200" src="mixkit-airplane-landing-in-illuminated-airport-tracks-7374-hd-ready.mp4" allowfullscreen></iframe>
+            <iframe width="300" height="200" src="mixkit-mechanic-inspecting-an-airplane-engine-23990-hd-ready.mp4" allowfullscreen></iframe>
+            <iframe width="300" height="200" src="mixkit-passenger-plane-preparing-for-takeoff-4083-hd-ready.mp4" allowfullscreen></iframe>
 
         </div>
     </section>
@@ -46,9 +46,9 @@
             <a href="#">Terms of Service</a>
         </div>
         <div class="social-icons">
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images (3).jpeg" alt="Facebook"></a>
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images (4).jpeg" alt="Twitter"></a>
-            <a href="#"><img src="C:\Users\Dell\Desktop\in\images.png" alt="Instagram"></a>
+            <a href="#"><img src="images (3).jpeg" alt="Facebook"></a>
+            <a href="#"><img src="images (4).jpeg" alt="Twitter"></a>
+            <a href="#"><img src="images.png" alt="Instagram"></a>
         </div>
     </footer>
 </body>
