--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         <div class="expert-section">
             <h2>Meet Our Expert</h2>
             <div class="expert-info">
-                <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="Aviation Expert" class="expert-img">
+                <img src="EZHz5kDXQAEmSF3.png" class="expert-img">
                 <div class="expert-details">
                     <h3>John Doe</h3>
                     <p>John Doe, our lead aviation expert, has over 15 years of experience as a commercial pilot and aviation instructor. He is passionate about sharing his knowledge with aspiring pilots. John has flown across the globe and now devotes his time to teaching, guiding, and mentoring students through their flight training journey. He is dedicated to providing personalized feedback and practical advice to help students achieve their goals.</p>
