--- a/course.html
+++ b/course.html
@@ -62,7 +62,7 @@
         <h2>What Our Students Say</h2>
         <div class="testimonials-grid">
             <div class="testimonial">
-                <img src="alex.jpg" alt="Alex R." class="testimonial-img">
+                <img src="EZHz5kDXQAEmSF3.png" alt="Alex R." class="testimonial-img">
                 <p>"This course transformed my understanding of aviation. The hands-on lessons were invaluable!"</p>
                 <span>- Alex R., Commercial Pilot</span>
             </div>
