--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <footer>
         <p>© 2025 How to Be a Pilot. All rights reserved.</p>
         <div>
-            <a href="#">Privacy Policy</a> | 
+            <a href="#">Privacy Policy</a>
             <a href="#">Terms of Service</a>
         </div>
         <div class="social-icons">
